problem with post CSS not loading

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 title: "Data Me What"
 description: "Don't be caught with your data down"
 keywords: "tjspross,tj spross, spross, data me what,github,gh-pages"
-baseurl: "/"
+baseurl: datamewhat.com
 
-# url: "datamewhat.com"
+url: "datamewhat.com"
 # url: "http://127.0.0.1:4000"
 
 
