--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: "Data Me What"
 description: "Don't be caught with your data down"
 keywords: "tjspross,tj spross, spross, data me what,github,gh-pages"
-baseurl: datamewhat.com
+baseurl: /
 
 url: "datamewhat.com"
 # url: "http://127.0.0.1:4000"
