--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,8 @@
 {
-  "name": "jalpc_jekyll_theme",
-  "homepage": "http://www.jack003.com",
+  "name": "tj_jalpc_jekyll_theme",
+  "homepage": "http://datamewhat.com",
   "authors": [
-    "Jack <407613594@qq.com>"
+    "tj <tjspross@gmail.com>"
   ],
   "description": "For blog use.",
   "main": "",
